ecmascript/parser/tests/test262-error-references/fail/5864c96b99472ffc.js.stderr
error: Invalid access to super
 --> $DIR/tests/test262-parser/fail/5864c96b99472ffc.js:1:22
  |
1 | function f() { (super)() }
  |                      ^

